chore: change brand and title names

--- a/packages/editor-ui/src/plugins/i18n/locales/en.json
+++ b/packages/editor-ui/src/plugins/i18n/locales/en.json
@@ -76,6 +76,7 @@
 	"generic.next": "Next",
 	"about.aboutN8n": "About n8n",
 	"about.close": "Close",
+	"_brand.name": "My Communication",
 	"about.license": "License",
 	"about.n8nLicense": "Sustainable Use License + n8n Enterprise License",
 	"about.n8nVersion": "n8n Version",
